--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atharva Mulgund - Portfolio Website</title>
+    <title>Front-End Devloper</title>
     <link rel="shortcut icon" href="./assets/icon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
@@ -226,6 +226,9 @@
             </a>
             <a href="https://www.linkedin.com/in/atharvamulgund/" class="icon">
                 <span class="fab fa-linkedin"></span>
+            </a>
+            <a href="https://github.com/atharvamulgund/" class="icon">
+                <span class="fab fa-github"></span>
             </a>
         </div>
     </div>
