--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
               my lens and give it a personal touch.</span
             >
           </div>
-          <a href="./images/Resume.JPG" class="abtBtn" download> Resume </a>
+          <a href="./images/Resme.JPG" class="abtBtn" download> Resume </a>
         </div>
       </div>
       <!-- About Section Ends -->
