--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Atharva Mulgund - Portfolio Website</title>
+    <title>Front End Developer</title>
     <link rel="shortcut icon" href="./assets/icon.png" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
@@ -255,7 +255,7 @@
           <a href="mailto:atharva.mulgund@gmail.com" class="icon">
             <span class="fas fa-envelope"></span>
           </a>
-          <a href="https://www.instagram.com/atharva_mulgund" class="icon">
+          <a href="https://www.instagram.com/atharva.designs/" class="icon">
             <span class="fab fa-instagram"></span>
           </a>
           <a href="https://www.linkedin.com/in/atharvamulgund/" class="icon">
