--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
               knowledge of OOP's languages Java/C++/Python.<br />
             </span>
             <span
-              >Apart from this I am also a graphic designer, i.e. I am able to
-              make promotional/invitation's JPEG using Adobe Photoshop and also
+              >Apart from this I can create a
+              promotional/invitation's JPEG using Adobe Photoshop and also
               can edit videos. And lastly I love to capture the moments through
               my lens and give it a personal touch.</span
             >
