--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             </a>
           </div>
           <div class="card">
-            <a href="https://bikespots.netlify.app">
+            <a href="https://evenz.netlify.app/">
               <img
                 src="./images/Evenz.JPG"
                 alt="Evenz"
