--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
               my lens and give it a personal touch.</span
             >
           </div>
-          <a href="./images/Resume.JPG" class="abtBtn" download> Resume </a>
+          <a href="./images/Resume.pdf" class="abtBtn" download> Resume </a>
         </div>
       </div>
       <!-- About Section Ends -->
